# FoBiS

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: suite_tests.py  test_basic.py
